--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,16 +2,26 @@ project:
   type: website
 
 website:
-  title: "15th Swedish Economic History Meeting"
+  title: "15th SEHM"
+  favicon: assets/favicon.ico
   navbar:
     left:
       - href: index.qmd
+        icon: house
         text: Home
+      - href: programme.qmd
+        icon: calendar
+        text: Programme
+      - href: venues.qmd
+        icon: school
+        text: Venues
       - about.qmd
 
 format:
   html:
-    theme: flatly
+    theme:
+      light: flatly
+      dark: darkly
     css: styles.css
     toc: true
 
